--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
-  }
+  },
+  "TokenKey": "token musi zawierac szescdziesiat cztery znaki super secret ungeussable key token musi zawierac szescdziesiat cztery znaki "
 }
